# google-calendar-with-signwriting-support

./: README.md  index.html
.github/workflows/: pipeline.yml
application/backend/v1/: Makefile  pyproject.toml
application/backend/v1/src/: main.py
application/frontend/: Signwriting.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
application/frontend/src/: App.vue  main.ts
application/frontend/src/assets/: base.css  main.css  signs.ts  utils.ts
application/frontend/src/components/: Activities.vue  ActivitiesList.vue  BtnCreateEvent.vue  CalendarDay.vue  CreateEvent.vue  CustomFooter.vue  Footer.vue  GlobalTypes.vue  GlobalVars.vue  LanguageSwitcher.vue  LanguageWrapper.vue  NavBar.vue  NavBarDesktop.vue  NavBarMobile.vue  NavigationDrawer.vue  OnHoldAlert.vue  SignWriting.vue  Types.vue
application/frontend/src/components/Calendar/: CalendarActivity.vue  CalendarClassItem.vue  CalendarCourse.vue  CalendarDay.vue  CalendarDayContainer.vue  CalendarEvent.vue  CalendarEventContainer.vue  CalendarListActivities.vue  CalendarMonth.vue  CalendarYear.vue
application/frontend/src/router/: index.ts
application/frontend/src/stores/: alert.ts  calendarEvents.ts  classes.ts  course.ts  createEvent.ts  language.ts  navBar.ts  stores.ts
application/frontend/src/views/: ActivitiesCalendar.vue  Calendar.vue  CalendarMain.vue  CreateClass.vue  HomeView.vue
application/scripts/: create_local_hooks.sh  pre-commit
assets/: index.css  index.js  index.js.map
(+8 files in other folders)
